Fix licenses + small POM changes